manifests/www-canary/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: canary-test-www
  namespace: canary-test
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: nginx
  rules:
  - host: canary.kind.lab
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: canary-test-www
            port:
              name: http
